fix: adjust h1 font size for improved readability

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 2.5em;
   line-height: 1.1;
   font-family: "Montserrat-Bold";
 }
